[package]
name = "mass-rc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
reqwest = { version = "0.11", features = ["json"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oauth1-request = { version = "0.5", features = ["hmac-sha1"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"], optional = true }
blocking = "1.6.2"

[features]
default = ["async"]
async = ["reqwest/tokio-rustls", "tokio"]
blocking = ["reqwest/blocking", "reqwest/rustls-tls"]